--- a/org.bbaw.pdr.allies/build.properties
+++ b/org.bbaw.pdr.allies/build.properties
@@ -4,18 +4,27 @@ bin.includes = META-INF/,\
                .,\
                plugin.xml,\
                lib/,\
-               lib/lib-pdr-allies-1.1.0.jar,\
                lib/commons-codec-1.8.jar,\
                lib/commons-logging-1.1.3.jar,\
                lib/commons-logging-adapters-1.1.3.jar,\
                lib/httpclient-4.3.jar,\
                lib/httpcore-4.3.jar,\
                lib/httpmime-4.3.jar,\
-               lib/commons-httpclient-3.1.jar
+               lib/commons-httpclient-3.1.jar,\
+               lib/lib-pdr-allies-1.0.0.jar
 bin.excludes = lib/commons-codec-1.6.jar,\
                lib/commons-logging-1.1.1.jar,\
                lib/commons-logging-adapters-1.1.1.jar,\
                lib/httpclient-4.2.jar,\
                lib/httpcore-4.2.jar,\
                lib/httpmime-4.2.jar,\
-               lib/lib-pdr-allies-1.0.0.jar
+               lib/lib-pdr-allies-1.0.0.jar,\
+               lib/lib-pdr-allies-1.1.0.jar,\
+               lib/lib-pdr-1.1.2.jar,\
+               lib/lib-pdr-1.0.4.jar,\
+               lib/lib-padre-1.0.1.jar,\
+               lib/lib-padre-1.0.2.jar,\
+               lib/lib-padre-client-1.0.2.jar,\
+               lib/lib-padre-client-1.0.1.jar,\
+               lib/apache-solr-solrj-4.0.0-ALPHA.jar,\
+               lib/axis2-kernel-1.6.2.jar
