git ignore even more stuff (from desktop workspace)

--- a/.gitignore
+++ b/.gitignore
@@ -22,3 +22,19 @@ org.bbaw.pdr.ae.view.relationnetwork/
 org.bbaw.pdr.ae/build.xml
 org.bbaw.pdr.ae/javaCompiler...args
 tags
+
+
+.recommenders/
+RemoteSystemsTempFiles/
+meta.tar.gz
+org.apache.commons.codec/
+org.apache.commons.logging/
+org.apache.httpcomponents.httpclient/
+org.apache.httpcomponents.httpcore/
+org.bbaw.pdr.ae.common/linux32-ae-delta-pack.target
+org.bbaw.pdr.ae.control.datahandling.xqj/target/
+org.bbaw.pdr.ae.repositoryConnection/
+org.bbaw.pdr.ae.view.main.markup.stext/build.xml
+org.bbaw.pdr.ae.view.main.markup.stext/javaCompiler...args
+org.eclipse.rap.addons.ckeditor/
+plugins/
