Fixing bug spawning empty aspects
default handler for 'new aspect' commands / buttons / menus did save
empty aspects to local DB regardless of editor dialog termination.
Replaced handler with what was supposedly meant to be default handler anyway.

--- a/org.bbaw.pdr.ae.base/plugin.xml
+++ b/org.bbaw.pdr.ae.base/plugin.xml
@@ -95,7 +95,7 @@
          <toolbar
                id="org.bbaw.pdr.commands.toolbar.aspect">
             <command
-                  commandId="org.bbaw.pdr.ae.view.main.commands.NewAspect"
+                  commandId="org.bbaw.pdr.ae.view.main.commands.AddNewAspect"
                   icon="platform:/plugin/org.bbaw.pdr.ae.common/src/org/bbaw/pdr/ae/common/icons/toolbar_aspect_new.png"
                   label="%command.label.40"
                   style="push"
@@ -430,7 +430,7 @@
                label="%menu.label.aspect"
                mnemonic="A">
             <command
-                  commandId="org.bbaw.pdr.ae.view.main.commands.NewAspect"
+                  commandId="org.bbaw.pdr.ae.view.main.commands.AddNewAspect"
                   icon="platform:/plugin/org.bbaw.pdr.ae.common/src/org/bbaw/pdr/ae/common/icons/aspect_new.png"
                   label="%command.label.40"
                   style="push">
