--- a/org.bbaw.pdr.ae.view.main.main/plugin.xml
+++ b/org.bbaw.pdr.ae.view.main.main/plugin.xml
@@ -85,7 +85,7 @@
             name="%command.name.31">
       </command>
       <command
-            categoryId="org.bbaw.pdr.ae.category.edit"
+            categoryId="org.bbaw.pdr.ae.category.file"
             defaultHandler="org.bbaw.pdr.ae.view.main.commands.AddNewAspectHandler"
             id="org.bbaw.pdr.ae.view.main.commands.AddNewAspect"
             name="%command.name.41">
